# EuclidClusterViz

./: .gitignore  .readthedocs.yaml  CONFIGURATION_GUIDE.md  PERFORMANCE_OPTIMIZATION_ROADMAP.md  README.md  Singularity.def  USAGE.md  config.ini  config.py  config_example.ini  launch.sh  plan1.md  pyproject.toml  requirements.txt  run_dash_app.sh  run_dash_app_venv.sh  run_remote_dash.sh  setup_config.sh  setup_environment.sh  setup_venv.sh
cluster_visualization/: PATH_FIXES_SUMMARY.md  REORGANIZATION_SUMMARY.md  __init__.py
cluster_visualization/callbacks/: __init__.py  aladin_callbacks.py  catred_callbacks.py  cluster_modal_callbacks.py  esasky_callbacks.py  main_plot.py  mer_callbacks.py  mosaic_callback.py  phz_callbacks.py  ui_callbacks.py  utils.py
cluster_visualization/core/: __init__.py  app.py
cluster_visualization/docs/: ALADIN_LITE_VIEW_GUIDE.md  ASPECT_RATIO_UPDATE.md  CATRED_CREATETRACES_FIX_SUMMARY.md  CATRED_FIX_SUMMARY.md  CATRED_PARAMETER_FIX_SUMMARY.md  CLUSTER_ANALYSIS_GUIDE.md  CONFIGURATION_GUIDE.md  DEBUG_OUTPUT_GUIDE.md  DISK_CACHING_IMPLEMENTATION.md  ESASKY_INTEGRATION.md  ESA_SKY_MOSAIC_EXTRACTION.md  HEALPY_INSTALLATION_GUIDE.md  MAGNITUDE_IMPLEMENTATION_SUMMARY.md  MASKED_CATRED_IMPLEMENTATION.md  MEMORY_MANAGER_VERIFICATION.md  MOSAIC_RENDERING_UPGRADE.md  PERFORMANCE_FIX_GETSIZEOF.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  README.md  RENDER_BUTTON_GUIDE.md  SNR_REDSHIFT_FILTER_COMPLETE.md  SPATIAL_INDEXING_IMPLEMENTATION.md  SSH_TUNNEL_MONITORING.md  THRESHOLD_SLIDER_COMPLETE.md  TILE_CACHING_AND_CONTROLS.md  TILE_FILTERING_FIX_COMPLETE.md  TROUBLESHOOTING.md  USAGE.md  VIEWPORT_OPTIMIZATION.md  VIEW_MODE_SWITCHING_GUIDE.md  ZOOM_BASED_OVAL_RENDERING.md  conf.py  index.rst
cluster_visualization/docs/api/: callbacks.rst  core.rst  index.rst  src.rst  ui.rst  utils.rst
cluster_visualization/docs/guides/: index.rst
cluster_visualization/scripts/: emergency_server.py  generate_all_algorithms.sh  generate_html.sh  launch.sh  run_dash_app.sh  run_dash_app_venv.sh  run_remote_dash.sh  start_cluster_server.sh
cluster_visualization/src/: __init__.py  cluster_dash_app.py  config.py  generate_standalone_html.py  mermosaic.py  simple_http_server.py  simple_server.py  test_dash_app.py
cluster_visualization/src/callbacks/: main_plot.py  mer_callbacks.py  phz_callbacks.py
cluster_visualization/src/data/: __init__.py  catred_handler.py  loader.py  mer_handler.py
cluster_visualization/src/visualization/: __init__.py  catred_proximity.py  figures.py  traces.py
cluster_visualization/tests/: __init__.py  run_all_tests.py  test_callbacks.py  test_catred_handler.py  test_clientside_filtering.py  test_cluster_tagging_helpers.py  test_connection_monitoring.py  test_data_loader.py  test_debug_output.py  test_esasky_integration.py  test_figure_manager.py  test_memory_manager.py  test_memory_with_traces.py  test_mer_function.py  test_mer_handler.py  test_mosaic_comparison.py  test_mosaic_fixes.py  test_mosaic_sources.py  test_oval_performance.py  test_performance_fix.py  test_png_mosaic.py  test_snr_redshift_filtering.py  test_spatial_index_performance.py  test_threshold_slider.py  test_tile_filtering_fix.py  test_trace_creator.py  test_ui_core.py
cluster_visualization/ui/: __init__.py  aladin_view.py  data_controls.py  enhanced_styles.css  esasky_view.py  layout.py  modals.py  sidebar_sections.py  tabs.py
cluster_visualization/utils/: __init__.py  colordefinitions.py  disk_cache.py  magnitude.py  memory_manager.py  myutils.py  profiler.py  spatial_index.py
configs/: config_tr1e.ini  config_tr1f_north.ini  config_tr1f_south.ini
graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_detect.json  .graphify_extract.json  .graphify_uncached.txt  GRAPH_REPORT.md  graph.html  graph.json
graphify-out/cache/: stat-index.json
graphify-out/chunks/: chunk_1.json  chunk_1.txt  chunk_2.json  chunk_2.txt  chunk_3.json  chunk_3.txt  chunk_4.json  chunk_4.txt
