[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Alternative: Use setuptools (comment above and uncomment below if needed)
# requires = ["setuptools>=61.0", "wheel"]
# build-backend = "setuptools.build_meta"

[project]
name = "cluster-visualization"
version = "1.0.0"
description = "Advanced interactive web-based visualization platform for astronomical cluster detection data from the ESA Euclid Mission"
authors = [{name = "Viraj Nistane", email = "nato.viraj@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["astronomy", "euclid", "visualization", "cluster-detection", "dash", "plotly"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

# Runtime dependencies
dependencies = [
    "plotly==5.17.0",
    "pandas==2.1.4",
    "numpy==1.24.3",
    "astropy>=5.0",
    "healpy>=1.16.0",
    "shapely==2.0.2",
    "dash==2.14.1",
    "dash-bootstrap-components==1.5.0",
    "Pillow>=9.2.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=1.0",
    "pylint>=2.15",
]

# Testing dependencies
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
]

# Documentation dependencies
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]

# All optional dependencies combined
all = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=1.0",
    "pylint>=2.15",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]

[project.scripts]
cluster-viz = "cluster_visualization.src.cluster_dash_app:main"
cluster-viz-test = "cluster_visualization.tests.run_all_tests:main"

# Shell scripts are included in package data
# Access them with: python -m cluster_visualization.scripts.launch
# Or find them in: <install-path>/cluster_visualization/scripts/

[project.urls]
Homepage = "https://github.com/virajnistane/EuclidClusterViz"
Repository = "https://github.com/virajnistane/EuclidClusterViz"
Documentation = "https://github.com/virajnistane/EuclidClusterViz/tree/dashapp/cluster_visualization/docs"
"Bug Tracker" = "https://github.com/virajnistane/EuclidClusterViz/issues"

[tool.hatch.build.targets.wheel]
packages = ["cluster_visualization"]

# Include non-Python files in the package
[tool.hatch.build.targets.wheel.shared-data]
"cluster_visualization/ui" = "cluster_visualization/ui"
"cluster_visualization/docs" = "cluster_visualization/docs"
"cluster_visualization/scripts" = "cluster_visualization/scripts"

# Alternative: Use setuptools configuration (if reverting to setuptools build backend)
# [tool.setuptools]
# packages = {find = {}}
#
# [tool.setuptools.package-data]
# cluster_visualization = [
#     "ui/*.css",
#     "docs/*.md",
#     "scripts/*.sh",
# ]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["cluster_visualization/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    'venv',
    'build',
    'dist',
]

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
]

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "ra", "dec", "id", "df", "x", "y"]

[tool.coverage.run]
source = ["cluster_visualization"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]